[tool.poetry]
name = "transformer-qa-decode"
version = "0.1.0"
description = ""
authors = ["p208p2002 <p208p2002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.0"
transformers = "^4.16.2"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
